kube-config/conv-api-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conv-api
  template:
    metadata:
      labels:
        app: conv-api
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /opt/app/uploads
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"    
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: conv-api-pvc
