kube-config/conv-app-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app-1
  labels:
    components: frontend
spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app:1.2
      ports:
        - containerPort: 80
          protocol: TCP
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
        requests:
          cpu: "50m"
          memory: "64Mi"
