kube-config/conv-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app
spec:
  replicas: 2
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      labels:
        components: frontend
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.2
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: "512Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
