kube-config/postgres-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        resources:
          limits:
            memory: "1024Mi"
            cpu: "400m"
          requests:
              cpu: "200m"
              memory: "256Mi"
        ports:
        - containerPort: 5432
