kube-config/rmq-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq
spec:
  selector:
    matchLabels:
      app: rmq
  template:
    metadata:
      labels:
        app: rmq
    spec:
      containers:
      - name: rmq
        image: rabbitmq:3.12.7
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
        - name: rmq-data
          mountPath: /var/lib/rabbitmq
      volumes:
      - name: rmq-data
        persistentVolumeClaim:
          claimName: pvc-rmq
