kube-config/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clusterip
spec:
  type: ClusterIP
  selector:
    components: frontend
  ports:
  - port: 80
    targetPort: 80
