kube-config/conv-api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  type: ClusterIP
  selector:
    app: conv-api
  ports:
    - port: 8080
      targetPort: 8080
