kube-config/rmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rmq-clusterip
spec:
  type: ClusterIP
  selector:
    app: rmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
